erDiagram
  PROJECT ||--o{ PROJECT_POLICY : versions
  PROJECT ||--o{ TASK : contains
  PROJECT_POLICY ||--o{ TASK : governs
  TASK ||--o{ RUN : attempts
  PROVIDER_PROFILE ||--o{ RUN : executes
  RUN o|--o{ RUN : recovers_as
  RUN ||--o{ RUN_EVENT : emits
  RUN ||--o{ CHECKPOINT : captures
  CHECKPOINT ||--o{ CHECKPOINT_FILE : contains
  ARTIFACT o|--o{ CHECKPOINT_FILE : stores
  ARTIFACT o|--o{ CHECKPOINT : manifests
  ARTIFACT o|--o{ CHECKPOINT : handoff
  PROJECT_POLICY ||--o{ CHECKPOINT : binds
  PROJECT_POLICY ||--o{ ACTION : constrains
  RUN ||--o{ ACTION : proposes
  CHECKPOINT o|--o{ ACTION : anchors
  ACTION ||--o| APPROVAL : requires
  RUN ||--o{ VERIFICATION : checks
  CHECKPOINT ||--o{ VERIFICATION : verifies
  VERIFICATION ||--o{ VERIFICATION_CHECK : results
  RUN ||--o{ WORKSPACE_LEASE : owns
  PROVIDER_PROFILE ||--o{ USAGE_SAMPLE : reports
  PROJECT ||--o{ BUDGET_ACCOUNT : budgets
  BUDGET_ACCOUNT ||--o{ BUDGET_RESERVATION : reserves
  ACTION ||--o| BUDGET_RESERVATION : funds
  RUN ||--o{ COST_ENTRY : incurs
  PROVIDER_PROFILE ||--o{ COST_ENTRY : bills
  ARTIFACT o|--o{ VERIFICATION_CHECK : output
  ARTIFACT o|--o{ USAGE_SAMPLE : raw_sample
  BUDGET_RESERVATION o|--o{ COST_ENTRY : settles
